fix: mobile zoom issues, added meta tag, fixed other style and spacing issues

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Breakpoints
 $bp-narrow: "(min-width: 500px)";
-$bp-narrow-max: "(max-width: 500px)";
-$bp-mid: "(min-width: 720px)";
+$bp-narrow-max: "(max-width: 720px)";
+$bp-mid: "(min-width: 721px)";
 $bp-wide: "(min-width: 1200px)";
 
 // Colors
